statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: ofir
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/ofir/k8s-workshop:mariadb
          args:
            - '--default-authentication-plugin=mysql_native_password'
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data-ofir 
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-data-ofir
          persistentVolumeClaim:
            claimName: mariadb-pvc-ofir
