wordpress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: ofir
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/ofir/k8s-workshop:wordpress
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-data-ofir
              mountPath: /var/www/html
      volumes:
        - name: wordpress-data-ofir
          persistentVolumeClaim:
            claimName: wordpress-pvc-ofir
