db_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: ofir
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: mariadb
  type: ClusterIP
