ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: ofir
spec:
  ingressClassName: nginx
  rules:
    - host: aee750e7560244a86894ef72f4630b41-1834286964.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /ofir
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
